--- a/Magenic.BadgeApplication/Magenic.BadgeApplication.Mvc/Views/Shared/_AdminNavbar.cshtml
+++ b/Magenic.BadgeApplication/Magenic.BadgeApplication.Mvc/Views/Shared/_AdminNavbar.cshtml
@@ -28,4 +28,6 @@
     @Html.HasPermission(AuthorizationActions.GetObject, typeof(PointsReportCollection), Html.GenerateConditionalNavigation(ApplicationResources.PointsReport, Mvc.PointsReport.Index().Result), String.Empty)
 
     @Html.HasPermission(AuthorizationActions.GetObject, typeof(ApproveActivityItem), Html.GenerateConditionalNavigation(ApplicationResources.ActivitiesForApproval, Mvc.BadgeManager.ApproveActivities().Result), String.Empty)
+
+    @Html.HasPermission(AuthorizationActions.GetObject, typeof(SubmittedActivityCollection), Html.GenerateConditionalNavigation(ApplicationResources.SubmitMultipleActivities, Mvc.BadgeManager.MultipleActivities().Result), String.Empty)
 </ul>
